--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node dist/server.js",
     "dev": "tsup --watch"
   },
-  "keywords": ["MCP", "PNG", "FastMCP"],
+  "keywords": [
+    "MCP",
+    "PNG",
+    "FastMCP"
+  ],
   "author": "User",
   "license": "MIT",
   "description": "A simple MCP server that reads PNG images",
@@ -19,11 +23,16 @@
   "devDependencies": {
     "@types/node": "^22.15.30",
     "tsup": "^8.5.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "tsup": {
-    "entry": ["server.ts"],
-    "format": ["esm"],
+    "entry": [
+      "server.ts"
+    ],
+    "format": [
+      "esm"
+    ],
     "dts": true,
     "splitting": false,
     "sourcemap": true,
